istio/singlestack-withkind/apps/ingress-from-mesh-demo/se-abasitt.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: abasitt-tech
  namespace: default
spec:
  hosts:
  - portal2.abasitt.tech
  exportTo:
    - '.'
  ports:
  - number: 8082
    name: http
    protocol: HTTP
  resolution: DNS
